# doc-fill-master

./: LICENSE  Makefile  NOTICE  README.md  pyproject.toml
src/: app.py  config.py  logger.py  utils.py
src/data/: data.csv
src/templates/: invoice.docx  letter.docx
src/translations/en/LC_MESSAGES/: messages.po
src/translations/ru/LC_MESSAGES/: messages.po
